data/all_generated_tests/raw_wast_tests/br_IncorrectConditionEvaluation_748.wast
;; 9. **Test Description**: Create a control structure (`block`) with a `br` to a non-existing (invalid) label index.    - **Constraint Checked**: Ensures label index validity check in the `br` instruction handling.    - **Incorrect Condition Evaluation**: An incorrect invalid branch label might be erroneously accepted or ignored.

(assert_invalid
  (module
    (func
      (block
        (br 3)
      )
    )
  )
  "unknown label"
)